@@ -30,7 +30,7 @@
 #include "php_mysqli.h"
 
 #define CHECK_STATUS(value) \
-	if (((MYSQLI_RESOURCE *)obj->ptr)->status < value ) { \
+	if (!obj->ptr || ((MYSQLI_RESOURCE *)obj->ptr)->status < value ) { \
 		php_error_docref(NULL TSRMLS_CC, E_WARNING, "Property access is not allowed yet"); \
 		ZVAL_NULL(*retval); \
 		return SUCCESS; \
@@ -134,7 +134,6 @@ static int link_client_info_read(mysqli_object *obj, zval **retval TSRMLS_DC)
 static int link_connect_errno_read(mysqli_object *obj, zval **retval TSRMLS_DC)
 {
 	ALLOC_ZVAL(*retval);
-	CHECK_STATUS(MYSQLI_STATUS_INITIALIZED);
 	ZVAL_LONG(*retval, (long)MyG(error_no));
 	return SUCCESS;
 }
@@ -144,8 +143,11 @@ static int link_connect_errno_read(mysqli_object *obj, zval **retval TSRMLS_DC)
 static int link_connect_error_read(mysqli_object *obj, zval **retval TSRMLS_DC)
 {
 	ALLOC_ZVAL(*retval);
-	CHECK_STATUS(MYSQLI_STATUS_INITIALIZED);
-	ZVAL_STRING(*retval, MyG(error_msg), 1);
+	if (MyG(error_msg)) {
+		ZVAL_STRING(*retval, MyG(error_msg), 1);
+	} else {
+		ZVAL_NULL(*retval);
+	}
 	return SUCCESS;
 }
 /* }}} */
